<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideInset" >
        
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginBottom="70dp"
	        android:layout_marginTop="70dp"
		    android:text="@string/loading"
		    android:textSize="40sp"
		    android:drawableTop="@raw/logo"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:padding="5dp"
	        android:gravity="center"
	        android:text="@string/detail"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/developer"
	        android:layout_gravity="center"
	        android:paddingLeft="5dp"
	        android:textColor="#FF00FF00"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email"
	        android:paddingLeft="5dp"
	        android:layout_gravity="center"
	        android:layout_marginBottom="5dp"
	        android:textColor="#FF00FF00"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	
	</LinearLayout>
</ScrollView>