<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent"
        android:scrollbarStyle="insideInset" >
        
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="5dp" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/ans_size"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />	
	        <EditText
	            android:id="@+id/ans_size_name"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="textCapCharacters"
	            android:longClickable="true" >
	            <requestFocus />
	        </EditText>
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
		
	        <TextView
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/ans_quantity"
	            android:textAppearance="?android:attr/textAppearanceMedium" />	
	        <EditText
	            android:id="@+id/ans_quantity"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="phone" />
	
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/ans_cont"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/contigency_view"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/ans_end_bits"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <EditText
	            android:id="@+id/end_bit"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="phone" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/ans_cuttable"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/ans_cuttable"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>